# swc-plugin-preeval

./: Cargo.toml  README.md  package-lock.json  package.json  test.js
src/: lib.rs
